# hpp-rbprm-corba

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yapfignore  CMakeLists.txt  NEWS  README.md  package.xml  pyproject.toml  setup.cfg  test1.py  test5.py
data/: car_simple.blend  car_simple.blend1  chair.blend  climb.blend  package.xml  stair.blend1  stair.blend2  stair_bauzil.blend  stair_bauzil.blend1  stair_bauzil.blend2  stair_bauzilreduced.blend  stepladder.blend  stepladder.blend1  stepladder.blend2
data/blender/: car.blend  car.dae  darpa.blend  darpareduced.blend  darpareduced_CTC.blend  ground_jump.blend  groundcrouch.blend  hyq.blend  hyq.blend1  obstacle.blend  robot_test.blend  stair.blend  stair_bauzil.blend  truck.blend  truck.blend1
data/com_inequalities/: LLEG_JOINT0_com_constraints.dae  LLEG_LINK5_Kinematics.dae  RLEG_JOINT0_com_constraints.dae  RLEG_LINK5_Kinematics.dae
data/com_inequalities/hrp2/: LA_com.ineq  LL_com.ineq  RA_com.ineq  RL_com.ineq
data/com_inequalities/hyq/: lfleg_com.ineq  lhleg_com.ineq  rfleg_com.ineq  rhleg_com.ineq
data/hyq_description/srdf/: hyq.srdf
data/hyq_description/urdf/: hyq.urdf
data/meshes/: bauzil_simplified.stl  bauzil_stairs.stl  bauzil_stairs_10cm.stl  bauzil_stairs_noRamp.stl  bauzil_stairs_noRamp_simplified.stl  bauzil_walk_stairs.stl  board.stl  box.stl  box_rom.stl  car.dae  car.stl  car_simple.stl  chair.stl  chair_simple.stl  climb.stl  cross_gap.stl  cross_gap2.stl  darpa.stl  darpa_no_ctc_mid.stl  darpa_no_ctc_mid_collision.stl  darpa_no_mid.stl  darpareduced.stl  downSlope.stl  downSlope2.stl  downSlope_easy.stl  downSlope_easy20.stl  flat_hole.stl  flat_step.stl  floor_bauzil.stl  floor_bauzil_obstacles.stl  ground.stl  ground_bigStep.stl  ground_jump_bar.stl  ground_jump_easy.stl  ground_jump_easyGoal.stl  ground_jump_easyStart.stl  ground_jump_easyStart2.stl  ground_jump_lowGoal.stl  ground_jump_med.stl  ground_square.stl  (+38 more)
data/meshes/hyq/: hyq_all.stl  hyq_all_realist.stl  hyq_lfleg_rom.stl  hyq_lhleg_rom.stl  hyq_rfleg_rom.stl  hyq_rhleg_rom.stl  hyq_rom.stl  hyq_trunk.stl  hyq_trunk_large.stl  hyq_trunk_large2.stl  hyq_trunk_large3.stl  hyq_trunk_large4.stl
data/meshes/robot_test/: Lleg_rom.stl  Rleg_rom.stl  lleg.stl  rleg_rom.stl  robot_lleg_rom.stl  robot_trunk.stl  robot_trunk_view.stl
data/meshes/siggraph_asia/: chair.stl  down.stl  grasp.stl  grasp_spidey.stl  mountain.stl  overview.stl  plane_hole.stl  scale.stl  scale_spidey.stl  stairs_lower.stl  twister.stl  wall.stl
data/roms/: centers.txt  centers.txt~  comlArm.erom  comlLeg.erom  comrArm.erom  comrLeg.erom  larm.erom  lleg.erom  rarm.erom  rleg.erom
data/roms/hyq/: lfleg.erom  lhleg.erom  rfleg.erom  rhleg.erom
data/roms/phantom/: lf.erom  lm.erom  lr.erom  rf.erom  rm.erom  rr.erom
data/spiderman/meshes/: lfoot_rom.stl  lhand_rom.stl  rfoot_rom.stl  rhand_rom.stl  spiderman-LFoot.stl  spiderman-LFootToe.stl  spiderman-LForearm.stl  spiderman-LHand.stl  spiderman-LHumerus.stl  spiderman-LShank.stl  spiderman-LThigh.stl  spiderman-RFoot.stl  spiderman-RFootToe.stl  spiderman-RForearm.stl  spiderman-RHand.stl  spiderman-RHumerus.stl  spiderman-RShank.stl  spiderman-RThigh.stl  spiderman-pelvis.stl  spiderman-pelvis_box.stl  spiderman-skull.stl  spiderman-skull_box.stl  spiderman-thorax.stl  spiderman-thorax_box.stl
data/spiderman/srdf/: SpidermanLFootSphere.srdf  SpidermanLHandSphere.srdf  SpidermanRFootSphere.srdf  SpidermanRHandSphere.srdf  spiderman.srdf  spiderman_trunk.srdf
data/spiderman/urdf/: SpidermanLFootSphere.urdf  SpidermanLHandSphere.urdf  SpidermanRFootSphere.urdf  SpidermanRHandSphere.urdf  spiderman.urdf  spiderman_trunk.urdf
data/srdf/: bauzil_stairs.srdf  bauzil_stairs_10cm.srdf  car.srdf  chair.srdf  climb.srdf  cross_gap.srdf  darpa.srdf  downSlope.srdf  flat_step.srdf  ground_bigStep.srdf  ground_with_bridge.srdf  groundcrouch.srdf  hrp2_larm_rom.srdf  hrp2_lleg_rom.srdf  hrp2_rarm_rom.srdf  hrp2_rleg_rom.srdf  hrp2_rom.srdf  hrp2_trunk_flexible.srdf  plane.srdf  plane_hole.srdf  polaris.srdf  roomWall.srdf  scene2.srdf  scene_wall.srdf  scene_wall2.srdf  sideWall.srdf  sideWall_long.srdf  stair_bauzil.srdf  stepladder.srdf  table.srdf  truck.srdf
data/srdf/hyq/: hrp2_trunk.srdf  hyq_lfleg_rom.srdf  hyq_lhleg_rom.srdf  hyq_rfleg_rom.srdf  hyq_rhleg_rom.srdf  hyq_rom.srdf  hyq_trunk.srdf  hyq_trunk_large.srdf  hyq_trunk_large_realist.srdf
data/srdf/robot_test/: robot_test_lleg_rom.srdf  robot_test_rleg_rom.srdf  robot_test_trunk.srdf
data/srdf/siggraph_asia/: chair.srdf  down.srdf  grasp.srdf  mount.srdf  overview.srdf  scale.srdf  scale_spidey.srdf  stairs_lower.srdf  twister.srdf  wall.srdf
data/urdf/: bauzil_stairs.urdf  bauzil_stairs_collision.urdf  box.urdf  box_rom.urdf  car.urdf  chair.urdf  climb.urdf  cross_gap.urdf  darpa.urdf  darpa_no_ctc_mid.urdf  darpa_no_mid.urdf  downSlope.urdf  downSlope_easy.urdf  downSlope_easy20.urdf  flat_hole.urdf  floor_bauzil.urdf  floor_bauzil_obstacles.urdf  ground.urdf  ground_jump_bar.urdf  ground_jump_easy.urdf  ground_jump_low.urdf  ground_jump_med.urdf  ground_with_bridge.urdf  groundcrouch.urdf  hrp2_larm_rom.urdf  hrp2_lleg_rom.urdf  hrp2_rarm_rom.urdf  hrp2_rleg_rom.urdf  hrp2_rom.urdf  hrp2_trunk.urdf  hrp2_trunk08.urdf  hrp2_trunk_arms_flexible.urdf  hrp2_trunk_flexible.urdf  hrp2_trunk_lowBody_flexible.urdf  plane.urdf  polaris.urdf  scene.urdf  scene2.urdf  scene_wall.urdf  scene_wall2.urdf  (+5 more)
data/urdf/hyq/: hyq_lfleg_rom.urdf  hyq_lhleg_rom.urdf  hyq_rfleg_rom.urdf  hyq_rhleg_rom.urdf  hyq_rom.urdf  hyq_trunk.urdf  hyq_trunk_large.urdf
data/urdf/robot_test/: robot_test_lleg_rom.urdf  robot_test_rleg_rom.urdf  robot_test_trunk.urdf
data/urdf/siggraph_asia/: chair.urdf  down.urdf  grasp.urdf  mount.urdf  overview.urdf  plane_hole.urdf  scale.urdf  scale_spidey.urdf  stairs_lower.urdf  twister.urdf  wall.urdf
src/: CMakeLists.txt  fwd.hh  hpp-rbprm-corba.cc  rbprmbuilder.impl.cc  rbprmbuilder.impl.cc.orig  rbprmbuilder.impl.hh  server.cc
src/hpp/corbaserver/rbprm/: __init__.py  __main__.py  client.py  fewstepsplanner.py  (+6 more)
(+940 files in other folders)
