<package>
  <name>hpp-rbprm-corba</name>
  <version>0.1.0</version>
  <description>
    Corba server bindings for rbprm.
  </description>
  <author>Steve Tonneau</author>
  <maintainer email="hpp@laas.fr">Steve Tonneau</maintainer>
  <license>LGPL v2</license>
  <build_depend>hpp-rbprm</build_depend>
</package>
